[wip] CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,6 +54,14 @@ function(ADDOPTS name dims prec int blas openmp)
       $<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:/debug:full>>
       )
   endif()
+  message(STATUS ${name},prec=${prec})
+  if(dims STREQUAL "2d")
+    target_compile_definitions(${name} PRIVATE -DUSE_DIM2)
+  elseif(dims STREQUAL "3d")
+    target_compile_definitions(${name} PRIVATE -DUSE_DIM3)
+  elseif(dims STREQUAL "xd")
+    target_compile_definitions(${name} PRIVATE -DUSE_DIMX)
+  endif()
   if(prec STREQUAL "sp")
     target_compile_definitions(${name} PRIVATE -DUSE_REAL32)
   elseif(prec STREQUAL "dp")
@@ -71,9 +79,14 @@ function(ADDOPTS name dims prec int blas openmp)
   endif()
 endfunction(ADDOPTS)
 
-function(ADDTEST name dims prec int blas openmp testarg)
+function(ADDTEST name dims prec int blas openmp moddir testarg)
   add_executable(${name} ${ARGN})
-  ADDOPTS("${name}" "${dims}" "${prec}" "${int}" "${blas}" "${openmp}")
+  if( NOT EXISTS "${moddir}" )
+    make_directory( "${moddir}" )
+  endif()
+  message(STATUS ${name},moddir=${moddir})
+  set_target_properties(${name} PROPERTIES Fortran_MODULE_DIRECTORY ${moddir})
+  ADDOPTS(${name} ${dims} ${prec} "${int}" "${blas}" "${openmp}")
   target_link_libraries(${name} PRIVATE unittest)
   target_include_directories(${name} PRIVATE ${unittest_INCLUDE_DIRS})
   add_test(NAME ${name} COMMAND ${name} ${testarg})
