[bugfix] enable build in python 3.12

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ foreach(var OpenBLAS)
   message(STATUS "Check BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
   find_package(BLAS QUIET)
   find_package(LAPACK QUIET)
+  message(STATUS "Check ${BLAS_FOUND} ${LAPACK_FOUND}")
   if( BLAS_FOUND AND LAPACK_FOUND )
     message(STATUS "Found BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
     break()
