[wip] CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,14 +16,15 @@ find_package(OpenMP QUIET)
 set(BLA_STATIC ON)
 foreach(var OpenBLAS)
   set(BLA_VENDOR ${var})
-  message(STATUS "Check BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
   find_package(BLAS QUIET)
   find_package(LAPACK QUIET)
-  message(STATUS "Check ${BLAS_FOUND} ${LAPACK_FOUND}")
   if( BLAS_FOUND AND LAPACK_FOUND )
     message(STATUS "Found BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
     break()
   endif( BLAS_FOUND AND LAPACK_FOUND )
+  set(BLA_VENDOR)
+  set(BLAS_FOUND)
+  set(LAPACK_FOUND)
 endforeach()
 
 set( mobbrmsd_PRECISIONS sp dp )
