[wip] test_mobbrmsd_lapack.f90

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   include( CTest )
   find_package(unittest QUIET)
   if(NOT unittest_FOUND)
+    set(CMAKE_MAXIMUM_RANK 2)
+    set(CMAKE_BUILD_TYPE Rerease)
     include(FetchContent)
     FetchContent_Declare(
       unittest
@@ -47,6 +49,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
       )
     FetchContent_MakeAvailable(unittest)
     set(unittest_INCLUDE_DIRS ${unittest_BINARY_DIR}/src/mod_files)
+    set(CMAKE_BUILD_TYPE Debug)
   else()
     set(unittest_INCLUDE_DIRS ${unittest_DIR}/mod_files)
   endif()
