--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -90,6 +90,7 @@ function(ADDTEST name dims prec int blas openmp moddir testarg)
   add_test(NAME ${name} COMMAND ${name} ${testarg})
 endfunction(ADDTEST)
 
+add_subdirectory( lapack )
 add_subdirectory( mobbrmsd )
 add_subdirectory( python_interface )
 
