--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,10 +68,10 @@ function(ADDOPTS name dims prec int blas openmp)
   endif()
   target_compile_definitions(${name} PRIVATE -DUSE_INT32)
   target_include_directories(${name} PRIVATE ${mobbrmsd_INCLUDE_DIR})
-  if(blas)
-    target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS} ${LAPACK_LINKER_FLAGS})
-    target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
-  endif()
+# if(blas)
+#   target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS} ${LAPACK_LINKER_FLAGS})
+#   target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+# endif()
   if(OpenMP_FOUND AND openmp)
     target_compile_options(${name} PRIVATE ${OpenMP_Fortran_FLAGS})
     target_link_libraries(${name} PRIVATE ${OpenMP_Fortran_LIB_NAMES})
@@ -90,7 +90,6 @@ function(ADDTEST name dims prec int blas openmp moddir testarg)
   add_test(NAME ${name} COMMAND ${name} ${testarg})
 endfunction(ADDTEST)
 
-add_subdirectory( lapack )
 add_subdirectory( mobbrmsd )
 add_subdirectory( python_interface )
 
