[add] mod_mobbrmsd_lapack_routines_dp.f90,  mod_mobbrmsd_lapack_routines_sp.f90

--- a/src/mobbrmsd/lapack/test/CMakeLists.txt
+++ b/src/mobbrmsd/lapack/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 foreach(prec IN ITEMS ${mobbrmsd_PRECISIONS})
   set(moddir ${CMAKE_CURRENT_BINARY_DIR}/${prec})
   ADDTEST(test_mobbrmsd_lapack_${prec} xd ${prec} 32 "" "" ${moddir} ""
-    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_lapack_routines.f90
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_lapack_routines_${prec}.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_lapack.f90
     ${CMAKE_CURRENT_SOURCE_DIR}/test_mobbrmsd_lapack.f90
     )
