[update] enable external blas

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,10 +65,11 @@ function(ADDOPTS name dims prec int blas openmp)
     target_compile_definitions(${name} PRIVATE -DUSE_REAL64)
   endif()
   target_compile_definitions(${name} PRIVATE -DUSE_INT32)
-# if(blas)
-#   target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS} ${LAPACK_LINKER_FLAGS})
-#   target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
-# endif()
+  if(blas)
+    target_compile_definitions(${name} PRIVATE -DUSE_EXTERNAL_LAPACK)
+    target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS} ${LAPACK_LINKER_FLAGS})
+    target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+  endif()
   if(OpenMP_FOUND AND openmp)
     target_compile_options(${name} PRIVATE ${OpenMP_Fortran_FLAGS})
     target_link_libraries(${name} PRIVATE ${OpenMP_Fortran_LIB_NAMES})
