[wip] CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,8 +65,10 @@ function(ADDOPTS name dims prec int blas openmp)
     target_compile_definitions(${name} PRIVATE -DUSE_REAL64)
   endif()
   target_compile_definitions(${name} PRIVATE -DUSE_INT32)
-  if(blas)
+  if( USE_EXTERNAL_LAPACK )
     target_compile_definitions(${name} PRIVATE -DUSE_EXTERNAL_LAPACK)
+  endif()
+  if(blas)
     target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS} ${LAPACK_LINKER_FLAGS})
     target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
   endif()
