--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,18 +14,21 @@ set( CMAKE_POSITION_INDEPENDENT_CODE ON )
 find_package(OpenMP QUIET)
 
 set(BLA_STATIC ON)
-foreach(var OpenBLAS)
-  set(BLA_VENDOR ${var})
-  find_package(BLAS QUIET)
-  find_package(LAPACK QUIET)
-  if( BLAS_FOUND AND LAPACK_FOUND )
-    message(STATUS "Found BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
-    break()
-  endif( BLAS_FOUND AND LAPACK_FOUND )
-  set(BLA_VENDOR)
-  set(BLAS_FOUND)
-  set(LAPACK_FOUND)
-endforeach()
+
+if( USE_EXTERNAL_LAPACK )
+  foreach(var OpenBLAS)
+    set(BLA_VENDOR ${var})
+    find_package(BLAS QUIET)
+    find_package(LAPACK QUIET)
+    if( BLAS_FOUND AND LAPACK_FOUND )
+      message(STATUS "Found BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
+      break()
+    endif( BLAS_FOUND AND LAPACK_FOUND )
+    set(BLA_VENDOR)
+    set(BLAS_FOUND)
+    set(LAPACK_FOUND)
+  endforeach()
+endif()
 
 set( mobbrmsd_PRECISIONS sp dp )
 set( mobbrmsd_DIMENTIONS 2d 3d xd )
@@ -35,8 +38,6 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   include( CTest )
   find_package(unittest QUIET)
   if(NOT unittest_FOUND)
-    set(CMAKE_MAXIMUM_RANK 2)
-    set(CMAKE_BUILD_TYPE Rerease)
     include(FetchContent)
     FetchContent_Declare(
       unittest
@@ -44,9 +45,11 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
       GIT_TAG origin/main
       GIT_PROGRESS TRUE
       )
+    set(CMAKE_MAXIMUM_RANK 2)
+    set(CMAKE_BUILD_TYPE Rerease)
     FetchContent_MakeAvailable(unittest)
-    set(unittest_INCLUDE_DIRS ${unittest_BINARY_DIR}/src/mod_files)
     set(CMAKE_BUILD_TYPE Debug)
+    set(unittest_INCLUDE_DIRS ${unittest_BINARY_DIR}/src/mod_files)
   else()
     set(unittest_INCLUDE_DIRS ${unittest_DIR}/mod_files)
   endif()
