[bugfix] fix tests

--- a/src/mobbrmsd/test/CMakeLists.txt
+++ b/src/mobbrmsd/test/CMakeLists.txt
@@ -33,7 +33,7 @@ foreach(dims IN ITEMS ${mobbrmsd_DIMENTIONS})
       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
       )
-    ADDTEST(test_covdot_${dims}${prec} ${dims} ${prec} 32 "" "" ${moddir} ""
+    ADDTEST(test_covdot_${dims}${prec} ${dims} ${prec} 32 1 "" ${moddir} ""
       ${sources}
       ${CMAKE_CURRENT_SOURCE_DIR}/test_covdot.f90
       )
