--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,10 @@ set( CMAKE_POSITION_INDEPENDENT_CODE ON )
 
 find_package(OpenMP QUIET)
 
-set(BLA_STATIC ON)
+#set(BLA_STATIC ON)
 
 if( USE_EXTERNAL_LAPACK )
+  #foreach(var Intel10_64ilp_seq OpenBLAS)
   foreach(var OpenBLAS)
     set(BLA_VENDOR ${var})
     find_package(BLAS QUIET)
@@ -23,6 +24,8 @@ if( USE_EXTERNAL_LAPACK )
     if( BLAS_FOUND AND LAPACK_FOUND )
       message(STATUS "Found BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
       break()
+    else()
+      message(STATUS "Not found BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
     endif( BLAS_FOUND AND LAPACK_FOUND )
     set(BLA_VENDOR)
     set(BLAS_FOUND)
