--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,20 +19,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
+        #os: [ubuntu-latest, macos-latest, windows-latest]
         toolchain:
+          - {compiler: gcc, version: 9}
+          - {compiler: gcc, version: 10}
+          - {compiler: gcc, version: 11}
           - {compiler: gcc, version: 12}
-          - {compiler: intel, version: '2023.2'}
-          - {compiler: nvidia-hpc, version: '24.5'}
-        exclude:
-          - os: macos-latest
-            toolchain: {compiler: intel, version: '2023.2'}
-          - os: macos-latest
-            toolchain: {compiler: nvidia-hpc, version: '24.5'}
-          - os: windows-latest
-            toolchain: {compiler: nvidia-hpc, version: '24.5'}
-          - os: windows-latest
-            toolchain: {compiler: intel, version: '2023.2'}
+          - {compiler: gcc, version: 13}
+          #- {compiler: intel, version: '2023.2'}
+          #- {compiler: nvidia-hpc, version: '24.5'}
+        # exclude:
+          #- os: macos-latest
+          #  toolchain: {compiler: intel, version: '2023.2'}
+          #- os: macos-latest
+          #  toolchain: {compiler: nvidia-hpc, version: '24.5'}
+          #- os: windows-latest
+          #  toolchain: {compiler: nvidia-hpc, version: '24.5'}
+          #- os: windows-latest
+          #  toolchain: {compiler: intel, version: '2023.2'}
 
     steps:
       - name: Checkout
