--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           - {compiler: gcc, version: 9}
           - {compiler: gcc, version: 10}
           - {compiler: gcc, version: 11}
-          #- {compiler: gcc, version: 12}
+          - {compiler: gcc, version: 12}
           - {compiler: gcc, version: 13}
           #- {compiler: intel, version: '2023.2'}
           #- {compiler: nvidia-hpc, version: '24.5'}
